gallery gap bug fixed

--- a/src/sass/layout/_section-gallery-better.scss
+++ b/src/sass/layout/_section-gallery-better.scss
@@ -18,11 +18,7 @@
   max-width: 1009px;
   margin: 0 -2px -2px;
 
-  @media screen and (mmin-width: 480px) {
-    margin: 0 -2px -2px;
-  }
-
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) {
     margin: 0 -3px -3px;
   }
 }
@@ -37,8 +33,8 @@
   margin-right: 2px;
 
   @media screen and (min-width: 480px) {
-    margin-left: 2px;
-    margin-right: 2px;
+    margin-left: 3px;
+    margin-right: 3px;
   }
 
   &--wide {
